# vllm-mlx

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  TODO.md  benchmark_all_prompt_lookup.py  benchmark_minmax.py  benchmark_prompt_lookup.py  install.sh  pyproject.toml  tier1_benchmark.json
.claude/: review-loop-codex-prompt.txt  todo.md
.codex-review-tmp/: agent1-input.txt  agent2-input.txt
.codex_tmp/: agent1_context.txt  agent1_prompt.txt  agent1_raw.txt  agent2_context.txt  agent2_prompt.txt  agent2_raw.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_support.yml  performance_issue.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: agentic-runtime-design.md  architecture.md  index.md  inference-efficiency-papers-2025.md  usage-stats.md
docs/assets/: demo.cast
docs/benchmarks/: README.md  image.md  llm.md  video.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: audio.md  continuous-batching.md  embeddings.md  mcp-tools.md  multimodal.md  python-api.md  reasoning.md  server.md  tool-calling.md
docs/reference/: cli.md  configuration.md  models.md
evals/: EVAL_CONFIGS.md  README.md  SCORECARD.md  generate_scorecard.py  run_all_models.sh  run_eval.py
evals/prompts/: coding.json  general.json  reasoning.json  tool_calling.json
evals/results/: baseline_benchmark.json  devstral-small-2-4bit.json  glm-4.5-air-4bit.json  glm-4.7-flash-8bit.json  gpt-oss-20b-mxfp4-q8.json  hermes-3-llama-3.1-8b-4bit.json  minimax-m2.5-4bit.json  mistral-small-3.2-4bit.json  qwen3-0.6b-4bit.json  qwen3-coder-next-4bit.json  qwen3-coder-next-6bit.json  qwen3.5-122b-a10b-8bit.json  qwen3.5-122b-a10b-mxfp4.json  qwen3.5-27b-4bit.json  qwen3.5-35b-a3b-4bit.json  qwen3.5-35b-a3b-8bit.json  qwen3.5-4b-4bit.json  qwen3.5-9b-4bit.json  (+1 more)
examples/: audio_separation_example.py  benchmark_all_models.py  benchmark_audio.py  benchmark_detokenizer.py  closed_captions.py  demo_openai_image.py  demo_openai_text.py  demo_openai_video.py  mcp_chat.py  mcp_tool_use.py  mic_live.py  mic_realtime.py  mic_transcribe.py  mllm_benchmark.py  mllm_example.py  simple_generate.py  test_batch_sync.py  test_batching.py  test_openai_compatibility.py  test_video.py  tts_example.py  tts_multilingual.py  video_benchmark.py
harness/: README.md  thresholds-batched.yaml  thresholds.yaml
reviews/: review-20260315-122112-b9ec9e.md  review-20260315-125702-56c9c7.md  review-20260315-173408-c89dc4.md  review-20260315-195920-a2e83f.md
scripts/: add_mtp_weights.py  agent_discovery.py  agent_promo_gen.py  agent_test_gen.py  autoresearch_bench.py  bench_all_models.sh  bench_cache_perf.py  bench_decode_tps.py  bench_engine_parity.py  bench_engine_solo.py  bench_mtp.py  bench_snapshot.py  bench_vs_ollama.py  benchmark_engines.py  benchmark_prompt_lookup.py  benchmark_realworld.py  demo.tape  demo_race.py  dev_test.py  extract_mtp_weights.py  gen_synthetic_mtp_weights.py  mhi_batch.sh  mhi_eval.py  usage_stats.py
tests/: golden_prompts.py  regression_suite.py  test_anthropic_route_streaming.py  test_anthropic_stream_reasoning.py  test_anthropic_streaming_reasoning.py  test_api_models.py  test_api_utils.py  test_audio.py  test_batching.py  test_batching_deterministic.py  test_bench_vs_ollama.py  test_chat_route_tool_tag_leak.py  test_chat_stream_tool_continuation.py  test_chat_tool_retry.py  test_cli_tui_ready.py  test_cloud_router.py  test_config_and_middleware.py  test_continuous_batching.py  test_deepseek_v4_vendored.py  test_deltanet_cache.py  test_deltanet_snapshot.py  test_dflash_ddtree_engine.py  test_doctor_baseline.py  test_doctor_discovery.py  test_doctor_runner.py  test_embeddings.py  test_engine_parity.py  test_engine_step_thread.py  test_event_loop.py  test_fix_reasoning_mtp_doctor.py  test_fsm_tool_call.py  test_gemma4_tool_parser.py  test_guided.py  test_harmony_parsers.py  test_hybrid.py  test_jangtq_loader.py  test_kv_cache_quantization.py  test_llm_cache.py  test_mcp_security.py  test_memory_cache.py  (+56 more)
vllm_mlx/: __init__.py  aliases.json  benchmark.py  cli.py  cloud_router.py  embedding.py  engine_core.py  gradio_app.py  gradio_text_app.py  memory_cache.py  mllm_batch_generator.py  mllm_scheduler.py  model_aliases.py  model_auto_config.py  model_registry.py  model_runner.py  multimodal_processor.py  output_collector.py  output_router.py  paged_cache.py  prefix_cache.py  request.py  request_metrics.py  scheduler.py  server.py  tui.py  turboquant.py  vision_embedding_cache.py  vllm_platform.py
(+237 files in other folders)
